# ap-lab

./: pyproject.toml
ap_lab/: __init__.py
ap_lab/config/: settings.py  urls.py
ap_lab/health_insurances/: admin.py  apps.py  models.py  routers.py  serializers.py  views.py
ap_lab/health_insurances/migrations/: 0001_initial.py  0002_remove_healthinsurance_coinsurance_price.py
ap_lab/patients/: admin.py  models.py  routers.py  serializers.py  views.py
ap_lab/patients/migrations/: 0001_initial.py  0002_membership_patient_health_insurances.py  0003_membership_plan.py
ap_lab/reports/: admin.py  models.py  routers.py  serializers.py  views.py
ap_lab/reports/migrations/: 0001_initial.py  0002_measurement_report_delivery_datetime_and_more.py  0003_remove_reportmeasurement_nbu_quantity_and_more.py  0004_alter_reportmeasurement_options_and_more.py  0005_alter_reportmeasurement_measurement_and_more.py  0006_rename_health_insurances_report_health_insurance.py
